--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.4",
     "react-alice-carousel": "^2.5.1",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.7",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
   },
